# rise-indy-ros

indy7_description/urdf/: indy7.xacro
indy_custom_comp_msgs/: CMakeLists.txt  package.xml
indy_custom_comp_msgs/example/: request_algorithm_switch.py
indy_custom_comp_msgs/msg/: CompAlgorithm.msg
indy_custom_comp_msgs/srv/: AlgorithmSwitch.srv
indy_driver_py/: CMakeLists.txt  package.xml
indy_driver_py/src/: dcp_driver.py
